--- a/tables/index.html
+++ b/tables/index.html
@@ -7,7 +7,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<img src="" alt="" />
+		<div class="box" style="background-color: hsl(0, 255, 0); width: 200px; height: 200px"></div>
 	</body>
 </html>
