--- a/resume-project/index.html
+++ b/resume-project/index.html
@@ -21,6 +21,26 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
+			<h1>VIJAY CHOUDHARY</h1>
+			<nav>
+				<ul class="horizontal-list social-media-nav text-center">
+					<li>
+						<a href="#"><img class="social_media_icon" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000015_1549330433_linkedin-logo.png" alt="" /></a>
+					</li>
+					<li>
+						<a href="#"><img class="social_media_icon" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000022_1549822879_stackoverflow-logo.png" alt="" /></a>
+					</li>
+					<li>
+						<a href="#"><img class="social_media_icon" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000023_1549823282_google-plus-logo.png" alt="" /></a>
+					</li>
+					<li>
+						<a href="#"><img class="social_media_icon" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000014_1549330414_facebook-logo.png" alt="" /></a>
+					</li>
+					<li>
+						<a href="#"> <img class="social_media_icon" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000021_1549822861_quora-logo.png" alt="" /></a>
+					</li>
+				</ul>
+			</nav>
 		</header>
 
 		<main></main>
